# outside-in-alignment

./: .gitignore  CHANGELOG.md  CONSTITUTION_v0.1.md  CONSTITUTION_v0.2.md  CONSTITUTION_v0.3.md  CONSTITUTION_v0.4.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  watch_and_resume.sh
.github/workflows/: ci.yml
benchmark/: README.md  SCORING.md  benchmark-v0.1.md  benchmark-v0.2.md  sample.csv
benchmark/tasks/: calibration.jsonl  calibration_v02_extra.jsonl  hallucination.jsonl  hallucination_v02_extra.jsonl  sycophancy.jsonl  sycophancy_extra.jsonl  sycophancy_hard.jsonl
docs/: MANIFESTO.md  MANIFESTO_draft.md
examples/: README.md
kit/: oia.py  run_benchmark.py
paper/: oia-v01-paper.md  oia-v02-paper.html  oia-v02-paper.md
spec/: four-pillars.md  pillar1-calibrated-honesty.md  pillar2-externalized-memory.md  pillar3-anti-sycophancy.md  pillar4-goal-driven-execution.md
