[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outside-in-alignment"
version = "0.3.2"
description = "Operator-side discipline layer for LLMs. Compensates for calibration, memory, sycophancy, and action-feedback gaps."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "alignment", "ai-safety", "constitution", "operator-discipline"]
authors = [
    { name = "Atakan Akbaba", email = "hey@nakata.app" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/nakata-app/outside-in-alignment"
"Source" = "https://github.com/nakata-app/outside-in-alignment"

[project.scripts]
oia = "oia:main"

[tool.setuptools]
package-dir = { "" = "kit" }
py-modules = ["oia", "run_benchmark"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["CONSTITUTION_v0.1.md", "CONSTITUTION_v0.2.md", "CONSTITUTION_v0.3.md"]
